--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   #  jackson.default-property-inclusion: non_null
   datasource:
     #    url: jdbc:h2:file:~/ScheduleDB
-    url: jdbc:h2:file:${project.basedir}/backend/src/main/resources/db/init/ScheduleDB
+    jdbc-url: jdbc:h2:file:${project.basedir}/backend/src/main/resources/db/init/ScheduleDB
 
     driverClassName: org.h2.Driver
     username: sa
@@ -40,7 +40,7 @@ spring:
 spring:
   profiles: test
   datasource:
-    url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+    jdbc-url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
     username: sa
     password:
   jpa:
