--- a/schedule_ui/package.json
+++ b/schedule_ui/package.json
@@ -20,6 +20,7 @@
     "react-color": "^2.17.3",
     "react-datepicker": "^2.8.0",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-test-renderer": "^16.8.6",
     "reactstrap": "^8.0.1"
