--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation 'org.modelmapper:modelmapper:2.3.5'
     implementation 'org.apache.commons:commons-text:1.7' //?
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.liquibase:liquibase-core:3.8.0'
     
     runtimeOnly project(':schedule_ui')
     compileOnly 'org.projectlombok:lombok'
