--- a/backend/liquibase/build.gradle
+++ b/backend/liquibase/build.gradle
@@ -23,9 +23,10 @@ def liquibaseProp = [
         localDbUsername  : 'sa',
         localDbPassword  : 'password',
         snapshotDbUrl    : 'offline:h2?snapshot=' + liquibaseModuleDir + '/' + snapshotFileName,
-        initChangeLogFile: '01.schema.h2.sql',
-        baseChangeLogFile: dbDir + 'changelog.xml',
-        diffChangeLogFile: '02.changes.h2.sql',
+        initSqlFile      : 'schema.h2.sql',
+        diffSqlFile      : 'changes.h2.sql',
+        syncSqlFile      : 'sync.h2.sql',
+        baseChangeLogFile: dbMigrationDir + 'changelog.xml',
         snapshotFormat   : 'json',
         snapshotFile     : snapshotFileName,
         logLevel         : 'debug'
@@ -37,7 +38,7 @@ task generateInitChangelog(type: JavaExec) {
     classpath configurations.liquibase
     main = "liquibase.integration.commandline.Main"
 
-    args "--changeLogFile=" + liquibaseProp.initChangeLogFile
+    args "--changeLogFile=" + liquibaseProp.initSqlFile
     args "--url=" + liquibaseProp.localDbUrl
     args "--username=" + liquibaseProp.localDbUsername
     args "--password=" + liquibaseProp.localDbPassword
@@ -82,7 +83,7 @@ task diffChangeLog(type: JavaExec) {
     args "--referenceUrl=" + liquibaseProp.localDbUrl
     args "--referenceUsername=" + liquibaseProp.localDbUsername
     args "--referencePassword=" + liquibaseProp.localDbPassword
-    args "--changeLogFile=" + liquibaseProp.diffChangeLogFile
+    args "--changeLogFile=" + liquibaseProp.diffSqlFile
     args "--logLevel=" + liquibaseProp.logLevel
     args "diffChangeLog"
 }
@@ -92,10 +93,13 @@ task changelogSync(type: JavaExec) {
     classpath configurations.liquibase
     main = "liquibase.integration.commandline.Main"
 
-    args "--changeLogFile=" + liquibaseProp.initChangeLogFile
+    args "--changeLogFile=" + liquibaseProp.baseChangeLogFile
     args "--url=" + liquibaseProp.localDbUrl
     args "--username=" + liquibaseProp.localDbUsername
     args "--password=" + liquibaseProp.localDbPassword
     args "--logLevel=" + liquibaseProp.logLevel
+    args "--outputFile=" + liquibaseProp.syncSqlFile
     args "changelogSyncSQL"
 }
+//home/gonchar/IdeaProjects/DepSchedule/backend/src/main/resources/db/migrations/changelog.xml
+//home/gonchar/IdeaProjects/DepSchedule/backend/src/main/resources/db/migrations/changelog.xml
