--- a/backend/openapi_codegen/build.gradle
+++ b/backend/openapi_codegen/build.gradle
@@ -7,7 +7,6 @@ plugins {
  * https://github.com/OpenAPITools/openapi-generator/tree/master/modules/openapi-generator-gradle-plugin
  */
 task generateCode(type: org.openapitools.generator.gradle.plugin.tasks.GenerateTask) {
-    //    def rootDirToGenerate = "$projectDir/generated-sources".toString()
     def rootDirToGenerate = "$projectDir/../".toString()
 
     generatorName = "spring"
@@ -42,12 +41,10 @@ task generateCode(type: org.openapitools.generator.gradle.plugin.tasks.GenerateT
     }
 }
 
-//sourceSets.main.java.srcDirs += "$projectDir/generated-sources/src/main/java"
-
-tasks.register("clean") {
-    description = 'clean generated files'
-    delete "$projectDir/generated-sources"
-}
+//tasks.register("clean") {
+//group = "openapi tools"
+//    description = 'clean generated files'
+//    delete "$projectDir/generated-sources"
+//}
 
 generateCode.group = "openapi tools"
-clean.group = "openapi tools"
