--- a/backend/liquibase/.gitignore
+++ b/backend/liquibase/.gitignore
@@ -1,4 +1,3 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-### codegen
-/generated-sources
+### sql-scripts
+*.h2.sql
