Integration test global refactoring

--- a/backend/src/test/resources/application_host.properties
+++ b/backend/src/test/resources/application_host.properties
@@ -2,3 +2,10 @@
 restful.application.endpoint.host=http://localhost
 restful.application.endpoint.port=8080
 restful.application.endpoint.context=
+
+## ---------------------------
+##   DB Host configs - H2 DB
+## ---------------------------
+jdbc-url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+username=sa
+password=
