--- a/backend/jpackage/build.gradle
+++ b/backend/jpackage/build.gradle
@@ -5,8 +5,8 @@ task link(type: Exec, dependsOn: 'clean') {
 
     def buildPath = file("../build")
 
-    if (!buildPath.exists() || !buildPath.isDirectory())
-        throw new GradleException("directory '$buildPath' not found")
+//    if (!buildPath.exists() || !buildPath.isDirectory())
+//        throw new GradleException("directory '$buildPath' not found")
 
     commandLine "${jdk14Path}/bin/jpackage",
             "--runtime-image", "${jdk12Path}",
