--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -3,8 +3,11 @@ spring:
   #  jackson.default-property-inclusion: non_null
   datasource:
     #    url: jdbc:h2:file:~/ScheduleDB
-    jdbc-url: jdbc:h2:file:${project.basedir}/backend/src/main/resources/db/storage/ScheduleDB
-
+#    jdbc-url: jdbc:h2:file:${rootDir}/backend/src/main/resources/db/storage/ScheduleDB
+    filePath: ${rootDir}
+    filePathInProjectDir: ${rootDir}/backend/storage/ScheduleDB.mv.db
+    #classpath:db/storage/ScheduleDB.mv.db
+    #file:./ScheduleDB.mv.db
     driverClassName: org.h2.Driver
     username: sa
     password: password
