--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,12 +2,9 @@ spring:
   application.name: DepSchedule
   #  jackson.default-property-inclusion: non_null
   datasource:
-    #    url: jdbc:h2:file:~/ScheduleDB
 #    jdbc-url: jdbc:h2:file:${rootDir}/backend/src/main/resources/db/storage/ScheduleDB
-    filePath: ${rootDir}
+    filePath: ${rootDir}/storage/ScheduleDB.mv.db
     filePathInProjectDir: ${rootDir}/backend/storage/ScheduleDB.mv.db
-    #classpath:db/storage/ScheduleDB.mv.db
-    #file:./ScheduleDB.mv.db
     driverClassName: org.h2.Driver
     username: sa
     password: password
